# mack-bot

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  cli.go  docker-compose.yml  go.mod  go.sum  main.go  main_test.go  rsrc_windows_386.syso  rsrc_windows_amd64.syso  version.go
.github/workflows/: codeql.yml  docker-image.yml  go.yml  nightly.yml  pages.yml  release.yml
docs/: _config.yml  commands.md  configuration.md  index.md  installation.md  plugins.md
docs/_includes/: custom-head.html  nav_header_custom.html
scraper/: __main__.py  cookie.py  instagram.py  media.go  pyproject.toml  reddit.py  scraper.go  spotify.go  spotify.py  twitter.py  ytdl.go  ytdl.py
scripts/: install-linux.sh  install-mac.sh  install.ps1  release.ps1
src/plugins/: afk.go  anticall.go  antidelete.go  antilink.go  antispam.go  antistatus.go  antivv.go  antiword.go  autostatus.go  block.go  chat_cmds.go  command.go  command_test.go  del.go  download.go  filter.go  groups_admin.go  handler.go  i18n.go  i18n_test.go  lang_cmd.go  media.go  memstats.go  menu.go  menu_test.go  message.go  meta.go  mod_hook.go  newgc.go  pin_send.go  ping.go  report.go  sender.go  settings.go  settings_cmds.go  settings_test.go  shh.go  update_cmd.go  users.go  warn.go
src/sql/: anticall.go  antidelete.go  cache.go  db.go  groups.go  mod.go
src/store/: noop.go  store.go  store_test.go
src/store/sqlstore/: container.go  container_test.go  lidmap.go  store.go
src/store/sqlstore/upgrades/: 00-latest-schema.sql  12-compat.sql  upgrades_test.go
winres/: winres.json
