[project]
name = "mack-scraper"
version = "0.1.0"
description = "Mack-Bot media scraper CLI"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "yt-dlp>=2026.2.4",
]

[project.scripts]
mack-scraper = "scraper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
